--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
     <h1>What is git?</h1>
     <br>
     <p1>Git is a version control system. In which you can check all the history of changes you have made on your project.</p1>
+    <h2>This is developers part</h2>
+    <br>
+    <p2> I have created a new branch as dev1 to do some work individually without interrupting the original project</p2>
 </body>
