--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <p1>Git is a version control system. In which you can check all the history of changes you have made on your project.</p1>
     <h2>This is developers part</h2>
     <br>
-    <p2> I have created a new branch as dev1 to do some work individually without interrupting the original project</p2>
+    <p2> I have created a new branch as dev1 to do some work individually without interrupting the original project {Button}</Button></p2>
 </body>
