CHange in branch dev1

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <title> Anthors Git Learning Zone</title>
 </head>
@@ -9,3 +10,4 @@
     <br>
     <p2> I have created a new branch as dev1 to do some work individually without interrupting the original project {dropdown}</p2>
 </body>
+</html>
